--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 body {
     font-family: "Inter", sans-serif;
     color: #303030;
-    min-width: 345px;
+    min-width: 375px;
     /* 📍 Минимальная ширина */
 }
 
@@ -145,7 +145,7 @@ select:hover,
 }
 
 form {
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
 }
 
@@ -229,7 +229,6 @@ footer {
         /* 📍 Свойства для расположения элементов и отступа между ними */
     }
     .main-image {
-        max-width: 728px;
         width: 100%;
         /* 📍 Максимальная ширина для главного изображения в % */
     }
@@ -239,6 +238,7 @@ footer {
         /* 📍 Максимальная ширина для блока с текстом */
     }
     .about-section {
+        padding: 100px 0px;
         /* 📍 Внутренний отступ сверху и снизу */
     }
 }
@@ -247,6 +247,7 @@ footer {
     .info-wrapper {
         display: flex;
         flex-direction: column;
+        gap: 60px;
         /* 📍 Свойства для расположения 2-x списков и отступа между ними */
     }
 }
@@ -261,7 +262,7 @@ footer {
         /* 📍 Внутренние отступы сверху и снизу */
     }
     .main-section .wrapper {
-        margin-bottom: 40px;
+        margin-bottom: 50px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
     .main-title {
@@ -271,6 +272,7 @@ footer {
     .about-section .wrapper,
     .info-wrapper {
         margin-bottom: 40px;
+        gap: 50px
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 }
